--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,16 +1,23 @@
 .topnav {
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color: rgba(10, 77, 223, 0.842);
+    height: 150px;
   }
   
   /* Style the links inside the navigation bar */
+  .hd{
+    color: white;
+    position: relative;
+    top: 50px;
+    left: 800px;
+  }
   .topnav a {
-    float: left;
-    display: block;
-    color: black;
+   position: relative;
+   left: 600px;
+    color: white;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
+    text-decoration: underline;
     font-size: 17px;
   }
   
@@ -31,7 +38,7 @@
     float: right;
     padding: 6px;
     border: none;
-    margin-top: 8px;
+    margin-top: 19px;
     margin-right: 16px;
     font-size: 17px;
   }
