--- a/public/css/app.css
+++ b/public/css/app.css
@@ -117,23 +117,29 @@
 }
 .topnav {
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color:  #005eff;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    float: left;
+    float: right;
+    position: relative;
+    right: 10px;
     display: block;
-    color: black;
+    color: white;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
+    text-decoration: underline;
     font-size: 17px;
   }
-  
+  .fl{
+    position: relative;
+    right: 460px;
+    color: white;
+  }
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: rgb(221, 221, 221);
     color: black;
   }
   
@@ -149,7 +155,8 @@
     padding: 6px;
     border: none;
     margin-top: 8px;
-    margin-right: 16px;
+    position: relative;
+    left: 160px;
     font-size: 17px;
   }
   
