--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,6 +1,6 @@
 .topnav {
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color:  #001f82;
   }
   
   /* Style the links inside the navigation bar */
