--- a/public/css/app.css
+++ b/public/css/app.css
@@ -118,25 +118,20 @@
 .topnav {
     overflow: hidden;
     background-color:  #005eff;
+    height:150px ;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    float: right;
     position: relative;
-    right: 10px;
-    display: block;
+   left: 600px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: underline;
     font-size: 17px;
   }
-  .fl{
-    position: relative;
-    right: 460px;
-    color: white;
-  }
+  
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: rgb(221, 221, 221);
@@ -154,12 +149,26 @@
     float: right;
     padding: 6px;
     border: none;
-    margin-top: 8px;
-    position: relative;
-    left: 160px;
+    margin-top: 19px;
+    margin-right: 16px;
     font-size: 17px;
   }
-  
+  .info{
+    position: relative;
+    right: 140px;
+  }
+  .top2 input[type=text]{
+        justify-content: center;
+        padding: 6px;
+        width: 350px;
+        position: relative;
+        border: solid white ;
+        color: none;
+        bottom: 55px;
+        left: 200px;
+        font-size: 20px;
+      }
+
   /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
   @media screen and (max-width: 600px) {
     .topnav a, .topnav input[type=text] {
@@ -173,6 +182,29 @@
     .topnav input[type=text] {
       border: 1px solid #ccc;
     }
+  }
+  .hd{
+    color: white;
+    position: relative;
+    top: 50px;
+    left: 800px;
+  }
+  .top2{
+    position: relative;
+    bottom: 20px;
+   text-align: center;
+    background-color: #001f82;
+    color: white;
+    height: 150px;
+  }
+  .button{
+    padding: 1em;
+    width: 110;
+    height: 110;
+    background: #77ddf5;
+    color: #7801bd;
+    font-family: 'Candal';
+    text-align: center;
   }
 .foo-first {
     background: #001f82;
