--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,217 +1,131 @@
-.foo-first {
-    background: #001f82;
-    display: flex;
-    justify-content: center;
-    color: white;
-    align-items: center;
-    margin-top: 2em;
-}
-.foo-icon {
-    margin: 0em 0.8em;
-}
-.foo-icon > a > img {
-    height: 2em;
-}
-.foo-first > :nth-child(3){
-    margin-left: 5em
-}
-.foo-second {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 1.5em;
-    margin: 0em 10em;
-}
-.foo-second-social {
-    display: flex;
-    margin: 2em 0em;
-}
-.foo-second-social > :nth-child(1){
-    margin-left: 0em !important;
-
-}
-.subtitle-primary {
-    color: #005eff;
-    font-size: 2em;
-    font-family: candal;
-}
-.paragraph{
-    margin: 1em 0em;
-    font-family: Jura;
-    color: #73706e;
-    font-size: 1em;
-}
-.foo-third {
-    padding: 1em;
-    background: #005eff;
-    display: grid;
-    grid-template-columns: 60% 40%;
-    color: white;
-    padding-left: 8em;
-    padding-bottom: 5em;
-}
-.foo-sub-first > div {
-    margin: 2em;
-    font-family: 'Candal';
-    margin-left: 0!important;
-    width:60%;
-}
-.foo-logo-label{
-    font-size: 2em;
-}
-.foo-first > :nth-child(2){
-    font-family: Rubik;
-}
-.footer-third-link {
-    font-weight: bold;
-    color: white;
-    text-decoration: underline;
-    margin-right: 1em;
-    margin-top: 3em;
-}
-.link-foo-group-sub{
-    margin: 1em 0em;
-}
-.foo-logo-char {
-    display: flex;
-}
-.foo-logo-char > i {
-    font-size: 0.9em;
-}
-.foo-second-bloc {
-    width: 30em;
-}
-.foo-location {
-    margin-top: 1em;
-    font-size: 0.9em;
-}
-.foo-join {
-    padding: 1em;
-    width: auto;
-    background: #77ddf5;
-    color: #7801bd;
-    font-family: 'Candal';
-    text-align: center;
-}
-.foo-join-master{
-    display: flex;
-    cursor: pointer;
-}
-.foo-join-icon{
-    width: 2em !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 2px solid white;
-}
-.foo-join-icon > img {
-    height: 1em;
-}
-.foo-sub-second{
-    position: relative
-}
-.foo-sub-second > img {
-    height: 25em;
-    position: absolute;
-    bottom: -80px;
-    right:0px
-}
 .topnav {
-    overflow: hidden;
-    background-color:  #005eff;
-    height:150px ;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    position: relative;
-   left: 600px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: underline;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: rgb(221, 221, 221);
-    color: black;
-  }
-  
-  /* Style the "active" element to highlight the current page */
-  .topnav a.active {
-    background-color: #2196F3;
-    color: white;
-  }
-  
-  /* Style the search box inside the navigation bar */
-  .topnav input[type=text] {
-    float: right;
-    background-color: #001f82;
-    color: white;
-    padding: 6px;
-    border: none;
-    margin-top: 19px;
-    margin-right: 16px;
-    font-size: 17px;
-  }
-  .info{
-    position: relative;
-    right: 140px;
-  }
-  .top2 input[type=text]{
-        justify-content: center;
-        padding: 6px;
-        width: 350px;
-        position: relative;
-        border: solid white ;
-        color: none;
-        bottom: 55px;
-        left: 200px;
-        font-size: 20px;
-      }
+  overflow: hidden;
+  background-color:  #005eff;
+  height:150px ;
+}
 
-  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-  @media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
+/* Style the links inside the navigation bar */
+.topnav a {
+  position: relative;
+ left: 550px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: underline;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: rgb(221, 221, 221);
+  color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type=text] {
+  float: right;
+  background-color: #001f82;
+  color: white;
+  padding: 6px;
+  border: none;
+  margin-top: 19px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+.info{
+  position: relative;
+  right: 140px;
+}
+.top2 input[type=text]{
+      justify-content: center;
+      padding: 6px;
+      width: 350px;
+      position: relative;
+      border: solid white ;
+      color: none;
+      bottom: 55px;
+      left: 200px;
+      font-size: 20px;
     }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;
-    }
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
-  .hd{
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+.hd{
+  color: white;
+  position: relative;
+  top: 45px;
+  left: 700px;
+}
+.hdr{
+  display: grid;
+  grid-template-columns:8% 92% ;
+}
+.imback{
+  float: right;
+  position: relative;
+  bottom: 200px;
+}
+  
+
+.top2{
+  position: relative;
+  bottom: 20px;
+ text-align: center;
+  background-color: #001f82;
+  color: white;
+  height: 150px;
+}
+button{
+  position: relative;
+  bottom: 96px;
+  left: 440px;
+  border: none;
+  padding: 1em;
+  width: 110;
+  height: 110;
+  background: #77ddf5;
+  color: #7801bd;
+  font-family: 'Candal';
+  text-align: center;
+}
+.descr{
+    font-size: 25px;
     color: white;
     position: relative;
-    top: 50px;
-    left: 800px;
-  }
-  .top2{
+    left: 50px;
+    top: 20px;
+}
+.fontt{
     position: relative;
-    bottom: 20px;
-   text-align: center;
-    background-color: #001f82;
-    color: white;
-    height: 150px;
-  }
-  button{
+    left: 80px;
+}
+section{
     position: relative;
-    bottom: 96px;
-    left: 440px;
-    border: none;
-    padding: 1em;
-    width: 110;
-    height: 110;
-    background: #77ddf5;
-    color: #7801bd;
-    font-family: 'Candal';
-    text-align: center;
-  }
+    display: flex;
+    bottom: 52px;
+    background-color: #e60067;
+}
+.maq{
+    font-size: 40px;
+}
 .foo-first {
     background: #001f82;
     display: flex;
