--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,52 +1,108 @@
 .topnav {
-    overflow: hidden;
-    background-color:  #001f82;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
+  overflow: hidden;
+  background-color:  #005eff;
+  height:150px ;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  position: relative;
+ left: 550px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: underline;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: rgb(221, 221, 221);
+  color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type=text] {
+  float: right;
+  background-color: #001f82;
+  color: white;
+  padding: 6px;
+  border: none;
+  margin-top: 19px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+.info{
+  position: relative;
+  right: 140px;
+}
+.top2 input[type=text]{
+      justify-content: center;
+      padding: 6px;
+      width: 350px;
+      position: relative;
+      border: solid white ;
+      color: none;
+      bottom: 55px;
+      left: 200px;
+      font-size: 20px;
+    }
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
     display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the "active" element to highlight the current page */
-  .topnav a.active {
-    background-color: #2196F3;
-    color: white;
-  }
-  
-  /* Style the search box inside the navigation bar */
   .topnav input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px;
+    border: 1px solid #ccc;
   }
+}
+.hd{
+  color: white;
+  position: relative;
+  top: 45px;
+  left: 700px;
+}
+.hdr{
+  display: grid;
+  grid-template-columns:8% 92% ;
+}
+.imback{
+  float: right;
+  position: relative;
+  bottom: 200px;
+}
   
-  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-  @media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;
-    }
-  }
+
+.top2{
+  position: relative;
+  bottom: 20px;
+ text-align: center;
+  background-color: #001f82;
+  color: white;
+  height: 150px;
+}
+button{
+  position: relative;
+  bottom: 96px;
+  left: 440px;
+  border: none;
+  padding: 1em;
+  width: 110;
+  height: 110;
+  background: #77ddf5;
+  color: #7801bd;
+  font-family: 'Candal';
+  text-align: center;
+}
